updates to references

--- a/_units/06.md
+++ b/_units/06.md
@@ -29,6 +29,34 @@ test_questions:
  - What measurement does our perception of sonic "brightness" correlate to? How?
  - What are formants? How do they contribute to speech?
  - Describe the difference between the "temporal envelope" and the "spectral envelope".
+ 
+references:
+  wallmark:
+    authors:
+      - firstname: Z.
+        lastname: Wallmark
+    title: 'Describing sound: The cognitive linguistics of timbre'
+    publication: In 'Oxford Handbook of Timbre, Oxford University Press'
+    doi: 'https://doi.org/10.1093/oxfordhb/9780190637224.013.14'
+    year: 2018
+    
+  maccallum_roughness:
+    authors:
+      - firstname: J.
+        lastname: MacCallum
+      - firstname: A.
+        lastname: Einbond
+    title: 'Real-Time Analysis of Sensory Dissonance'
+    publication: 'Computer Music Modelling and Retrieval, R. Kronland-Martinet, S. Ystad, and K. Jensen (Eds.), LNCS 4969, pp. 203-211. Springer-Verlag, Berlin, Heidelberg'
+    year: 2008
+
+  wessel:
+    authors:
+      - firstname: D.L.
+        lastname: Wessel
+    title: 'Timbre space as a musical control structure'
+    publication: 'Computer Music Journal, 3(2): 45-52'
+    year: 1979
 
 ###
 # page layout:
@@ -68,7 +96,7 @@ and the way in which that energy changes over time. It is this multidimensional
 nature of timbre, as well as its intersection with both the physical
 and perceptual world that make it difficult to get a handle on and put 
 into words
-{% include cite ref="wallmark_describing_sound" %}.
+{% include cite ref="wallmark" %}.
 
 # Spectrum
 
@@ -451,7 +479,7 @@ are quite rough, due to the orchestration chosen.
 Despite the importance and complexity of timbre, it is often seen as 
 less important musically than rhythm, harmony, melody, etc. In 1978, David
 Wessel wrote a paper called "Timbre Space as a Musical Control Structure"
-{% include cite ref="wessel_timbre_space" %}, that,
+{% include cite ref="wessel" %}, that,
 as he described, was in response to a disagreement between himself and Pierre
 Boulez about the ability for timbre to play a structural role in music.
 In order to demonstrate the ability of timbre to override other musical
