--- a/_units/09.md
+++ b/_units/09.md
@@ -150,7 +150,7 @@ references:
     publication: 'Springer Science & Business Media'
     year: 2005
     
-  Wessel:
+  wessel:
     authors:
       - firstname: D.L.
         lastname: Wessel
