--- a/_units/12.md
+++ b/_units/12.md
@@ -22,8 +22,314 @@ test_questions:
 - Why could it be easier to capture certain instruments using optical motion capture than others?
 - What could be advantages and challenges when trying to track/record movement data outside the lab environment (e.g., during concerts or artistic performances)?
 
+references:
+  behne:
+    authors:
+      - firstname: K.-E.
+        lastname: Behne
+    title: '"Blicken Sie auf die Pianisten?!" Zur bildbeeinflussten Beurteilung von Klaviermusik im Fernsehen (Do you watch the pianists? On visually influenced judgements of piano music)'
+    publication: 'Medienpsychologie, 2(2): 115-131'
+    year: 1990
+    
+  behne_and_wollner:
+    authors:
+      - firstname: K.-E.
+        lastname: Behne
+      - firstname: C.
+        lastname: Wöllner
+    title: 'Seeing or hearing the pianists? A synopsis of an early audiovisual perception experiment and a replication'
+    publication: 'Musicae Scientiae, 15(3): 324-342'
+    year: 2011
+    
+  broughton_and_stevens:
+    authors:
+      - firstname: M.
+        lastname: Broughton
+      - firstname: C.
+        lastname: Stevens
+    title: 'Music, movement and marimba: an investigation of the role of movement and gesture in communicating musical expression to an audience'
+    publication: 'Psychology of Music, 37(2): 137-153'
+    doi: 'https://doi.org/10.1177/0305735608094511'
+    year: 2009
+    
+  burger_et_al2013a:
+    authors:
+      - firstname: B.
+        lastname: Burger
+      - firstname: S.
+        lastname: Saarikallio
+      - firstname: G.
+        lastname: Luck
+      - firstname: M.R.
+        lastname: Thompson
+      - firstname: P.
+        lastname: Toiviainen
+    title: 'Relationships between perceived emotions in music and music-induced movement'
+    publication: 'Music Perception, 30(5): 519-535'
+    year: 2013
+    
+  burger_et_al2013b:
+    authors:
+      - firstname: B.
+        lastname: Burger
+      - firstname: M.R.
+        lastname: Thompson
+      - firstname: S.
+        lastname: Saarikallio
+      - firstname: G.
+        lastname: Luck
+      - firstname: P.
+        lastname: Toiviainen
+    title: 'Influences of rhythm- and timbre-related musical features on characteristics of music-induced movement'
+    publication: 'Frontiers in Psychology, 4:183'
+    year: 2013
+    
+  burger_and_toiviainen2020:
+    authors:
+      - firstname: B.
+        lastname: Burger
+      - firstname: P.
+        lastname: Toiviainen
+    title: 'Embodiment in Electronic Dance Music: Effects of musical content and structure on body movement'
+    publication: 'Musicae Scientiae, 24(2): 186-205'
+    year: 2020
+    
+  burger_and_toiviainen2013:
+    authors:
+      - firstname: B.
+        lastname: Burger
+      - firstname: P.
+        lastname: Toiviainen
+    title: 'MoCap Toolbox – A Matlab toolbox for computational analysis of movement data.'
+    publication: 'Proceedings of the 10th Sound and Music Computing Conference (SMC10) (pp. 172–178)'
+    year: 2013
+    
+  carlson_et_al:
+    authors:
+      - firstname: E.
+        lastname: Carlson
+      - firstname: B.
+        lastname: Burger
+      - firstname: P.
+        lastname: Toiviainen
+    title: 'Dance like someone is watching: A social relations model study of music-induced movement'
+    publication: 'Music & Science, 1'
+    year: 2018
+    
+  chapados_and_levitin:
+    authors:
+      - firstname: C.
+        lastname: Chapados
+      - firstname: D.J.
+        lastname: Levitin
+    title: 'Cross-modal interactions in the experience of musical performances: physiological correlates'
+    publication: 'Cognition, 108(3): 639-651'
+    year: 2008
+    
+  davidson:
+    authors:
+      - firstname: J.W.
+        lastname: Davidson
+    title: 'Visual perception of performance manner in the movements of solo musicians'
+    publication: 'Psychology of Music, 21: 103-113'
+    year: 1993
+    
+  hajdu:
+    authors:
+      - firstname: G.
+        lastname: Hajdu
+    title: 'Embodiment and disembodiment in networked music performance'
+    publication: 'In Body, sound and space in music and beyond: Multimodal explorations, Wöllner, C. (ed.), (pp. 257–278). New York: Routledge'
+    year: 2017
+    
+  keller_et_all:
+    authors:
+      - firstname: P.E.
+        lastname: Keller
+      - firstname: G.
+        lastname: Knoblich
+      - firstname: B.H.
+        lastname: Repp
+    title: 'Pianists duet better when they play with themselves: On the possible role of action simulation in synchronization'
+    publication: 'Conciousness and Cognition, 16: 102-111'
+    year: 2007
+    
+  leman:
+    authors:
+      - firstname: M.
+        lastname: Leman
+    title: 'Embodied music cognition and mediation technology'
+    publication: 'MIT Press'
+    year: 2007
+    
+  luck_et_al:
+    authors:
+      - firstname: G.
+        lastname: Luck
+      - firstname: S.
+        lastname: Saarikallio
+      - firstname: B.
+        lastname: Burger
+      - firstname: M.R.
+        lastname: Thompson
+      - firstname: P.
+        lastname: Toiviainen
+    title: 'Effects of the Big Five and musical genre on music-induced movement'
+    publication: 'Journal of Research in Personality, 44(6): 714-720'
+    year: 2010
+    
+  miranda_and_wanderley:
+    authors:
+      - firstname: E.R.
+        lastname: Miranda
+      - firstname: M.M.
+        lastname: Wanderley
+    title: 'New Digital Musical Instruments: Control and interaction beyond the keyboard'
+    publication: 'Madison, WI: A-R Editions'
+    year: 2006
+    
+  schutz_and_lipscomb:
+    authors:
+      - firstname: M.
+        lastname: Schutz
+      - firstname: S.
+        lastname: Lipscomb
+    title: 'Hearing gestures, seeing music: vision influences perceived tone duration'
+    publication: 'Perception, 36(6): 888-897'
+    year: 2007
+    
+  solberg_and_jensenius:
+    authors:
+      - firstname: R.T.
+        lastname: Solberg
+      - firstname: A.R.
+        lastname: Jensenius
+    title: 'Group behaviour and interpersonal synchronization to electronic dance music'
+    publication: 'Musicae Scientiae, 23(1): 111-134'
+    year: 2019
+    
+  todd_and_cody:
+    authors:
+      - firstname: N.P.M.A.
+        lastname: Todd
+      - firstname: F.W.
+        lastname: Cody
+    title: 'Vestibular responses to loud dance music: A physiological basis of the "rock and roll threshold"'
+    publication: 'Journal of the Acoustical Society of America, 107: 496'
+    doi: 'https://doi.org/10.1121/1.428317'
+    year: 2000
+    
+  toiviainen_et_al:
+    authors:
+      - firstname: P.
+        lastname: Toiviainen
+      - firstname: G.
+        lastname: Luck
+      - firstname: M.R.
+        lastname: Thompson
+    title: 'Embodied meter: Hierarchical eigenmodes in music-induced movement'
+    publication: 'Music Perception, 28(1): 59-70'
+    year: 2010
+    
+  trainor_et_al:
+    authors:
+      - firstname: L.J.
+        lastname: Trainor
+      - firstname: X.
+        lastname: Gao
+      - firstname: J.-J.
+        lastname: Lei
+      - firstname: K.
+        lastname: Lehtovaara
+      - firstname: L.R.
+        lastname: Harris
+    title: 'The primal role of the vestibular system in determining musical rhythm'
+    publication: 'Cortex, 45(1): 35-43'
+    year: 2009
+    
+  vandyck_et_all:
+    authors:
+      - firstname: E.
+        lastname: Van Dyck
+      - firstname: D.
+        lastname: Moelants
+      - firstname: M.
+        lastname: Demey
+      - firstname: A.
+        lastname: Deweppe
+      - firstname: P.
+        lastname: Coussement
+      - firstname: M.
+        lastname: Leman
+    title: 'The impact of the bass drum on human dance movement'
+    publication: 'Music Perception, 30(4): 349-359'
+    year: 2013
+    
+  varela_et_all:
+    authors:
+      - firstname: F.J.
+        lastname: Varela
+      - firstname: E.
+        lastname: Thompson
+      - firstname: E.
+        lastname: Rosch
+    title: 'The embodied mind: Cognitive science and human experience'
+    publication: 'MIT Press'
+    year: 1991
+    
+  vines_et_all:
+    authors:
+      - firstname: B.W.
+        lastname: Vines
+      - firstname: C.L.
+        lastname: Krumhansl
+      - firstname: M.M.
+        lastname: Wanderley
+      - firstname: D.J.
+        lastname: Levitin
+    title: 'Cross-modal interactions in the perception of musical performance'
+    publication: 'Cognition, 101(1): 80-113'
+    doi: 'https://doi.org/10.1016/j.cognition.2005.09.003'
+    year: 2006
 
-
+  weiss_et_all:
+    authors:
+      - firstname: A.E.
+        lastname: Weiss
+      - firstname: M.
+        lastname: Nusseck
+      - firstname: C.
+        lastname: Spahn
+    title: 'Motion types of ancillary gestures in clarinet playing and their influence on the perception of musical performance'
+    publication: 'Journal of New Music Research, 47(2): 129-142'
+    doi: 'https://doi.org/10.1080/09298215.2017.1413119'
+    year: 2018
+    
+  wollner:
+    authors:
+      - firstname: C.
+        lastname: Wöllner
+    title: 'Anticipated sonic actions and sounds in performance'
+    publication: 'In The Oxford handbook of sound and imagination, Grimshaw, M., Walther-Hansen, M., & Knakkergaard, M. (Eds.), vol. 2 (pp. 37–57). New York: Oxford University Press'
+    year: 2019
+    
+  wollner_et_all:
+    authors:
+      - firstname: C.
+        lastname: Wöllner
+      - firstname: F.J.A
+        lastname: Deconinck
+      - firstname: J.
+        lastname: Parkinson
+      - firstname: M.J.
+        lastname: Hove
+      - firstname: P.E.
+        lastname: Keller
+    title: 'The perception of prototypical motion: Synchronization is enhanced with quantitatively morphed gestures of musical conductors'
+    publication: 'Journal of Experimental Psychology: Human Perception and Performance, 38(6): 1390–1403'
+    doi: 'https://doi.org/10.1037/a0028130'
+    year: 2012
+    
 ###
 # page layout:
 # don't change
@@ -255,7 +561,7 @@ The Musical Gesture Toolbox ([https://www.uio.no/ritmo/english/research/labs/fou
 
 * Solberg, R.T., & Jensenius, A.R. (2019). Group behaviour and interpersonal synchronization to electronic dance music. Musicae Scientiae, 23(1), 111-134.
 
-* Todd, N.P.M.A. & Cody, F.W. (2000). Vestibular responses to loud dance music: A physiological basis of the “rock and roll threshold”. Journal of the Acoustical Society of America 107, 496. https://doi.org/10.1121/1.428317
+* Todd, N.P.M.A. & Cody, F.W. (2000). Vestibular responses to loud dance music: A physiological basis of the “rock and roll threshold”. Journal of the Acoustical Society of America 107, 496. https://doi.org/10.1121/1.428317 
 
 * Toiviainen, P., Luck, G., & Thompson, M.R. (2010). Embodied meter: Hierarchical eigenmodes in music-induced movement. Music Perception, 28(1), 59-70.
 
