--- a/_units/01.md
+++ b/_units/01.md
@@ -131,6 +131,12 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
 picture-in-picture" allowfullscreen></iframe>
 </div>
 
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://elearning.hfmt-hamburg.de/pluginfile.php/7165/mod_page/content/6/ENIAC.png" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
+
 The playback in such a device relies on analog amplification: a heavy,
 but small needle modulates a thin and light, but larger membrane that 
 displaces a larger volume of air. Other recording and playback technologies
